product and industries

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -135,19 +135,25 @@
       }
     }
   },
-  "about": {
-    "title": "حول النجاح الذهبي",
-    "subtitle": "نقود الصناعة بالابتكار والتميز",
-    "description": "النجاح الذهبي هو اسم موثوق في الصناعة لسنوات، نقدم منتجات عالية الجودة وخدمة استثنائية لعملائنا في جميع أنحاء العالم.",
-    "ourMission": "مهمتنا",
-    "ourVision": "رؤيتنا",
-    "ourValues": "قيمنا",
-    "teamTitle": "تعرف على فريقنا",
-    "historyTitle": "تاريخنا"
+  "industries": {
+    "title": "القطاعات التي نخدمها",
+    "subtitle": "تمكين التقدم في المختبرات والعيادات والصناعة",
+    "aboutText": "في نجاح ذهبي، نخدم مجموعة واسعة من القطاعات العلمية والتشخيصية بمنتجات طبية حيوية مصممة بدقة. تدعم محفظتنا كل شيء من تشخيصات المختبرات السريرية المتطورة إلى مراقبة سلامة البيئة والغذاء. نحن نتفهم أن كل صناعة لها معاييرها الفريدة، ونقدم حلولاً تلبي الامتثال العالمي وإرشادات الهيئة العامة للغذاء والدواء ومعايير الأيزو.",
+    "heroTitle": "القطاعات التي نخدمها",
+    "heroDescription": "تمكين التقدم في المختبرات والعيادات والصناعة",
+    "description": "نخدم مجموعة واسعة من القطاعات بمنتجات وخدمات متخصصة.",
+    "errors": {
+      "fetchIndustries": "فشل تحميل القطاعات. يرجى المحاولة مرة أخرى لاحقًا."
+    }
   },
   "products": {
     "title": "منتجاتنا",
-    "subtitle": "اكتشف مجموعتنا الشاملة من المنتجات عالية الجودة",
+    "subtitle": "حلول طبية حيوية شاملة للمختبرات والعيادات ومراكز الأبحاث",
+    "description": "في نجاح ذهبي، نوفر مجموعة كاملة من المنتجات الطبية الحيوية المعتمدة من موردين عالميين موثوق بهم. تم تصميم كتالوجنا ليلبي احتياجات المختبرات السريرية ومراكز التشخيص وبحوث الأدوية والمرافق البيطرية ومختبرات فحص الطعام والماء - وكلها متوافقة بالكامل مع معايير الهيئة العامة للغذاء والدواء والمعايير الدولية.",
+    "ourRange": "مجموعة منتجاتنا",
+    "quoteRequested": "تم طلب عرض سعر لـ",
+    "product": "منتج",
+    "viewAllProducts": "عرض جميع المنتجات",
     "allProducts": "جميع المنتجات",
     "categories": "الفئات",
     "noProducts": "لم يتم العثور على منتجات",
@@ -156,34 +162,15 @@
     "features": "الميزات",
     "relatedProducts": "منتجات ذات صلة"
   },
-  "industries": {
-    "title": "الصناعات التي نخدمها",
-    "subtitle": "نقدم حلولاً عبر قطاعات مختلفة",
-    "description": "نحن نخدم مجموعة واسعة من الصناعات بمنتجاتنا وخدماتنا المتخصصة."
-  },
-  "contact": {
-    "title": "اتصل بنا",
-    "subtitle": "تواصل مع فريقنا",
-    "description": "نحب أن نسمع منك. أرسل لنا رسالة وسنرد في أقرب وقت ممكن.",
-    "form": {
-      "name": "الاسم الكامل",
-      "email": "عنوان البريد الإلكتروني",
-      "phone": "رقم الهاتف",
-      "company": "اسم الشركة",
-      "subject": "الموضوع",
-      "message": "الرسالة",
-      "send": "إرسال الرسالة",
-      "required": "هذا الحقل مطلوب",
-      "invalidEmail": "يرجى إدخال عنوان بريد إلكتروني صحيح"
-    },
-    "info": {
-      "address": "العنوان",
-      "phone": "الهاتف",
-      "email": "البريد الإلكتروني",
-      "hours": "ساعات العمل"
-    }
-  },
   "about": {
+    "title": "حول النجاح الذهبي",
+    "subtitle": "نقود الصناعة بالابتكار والتميز",
+    "description": "النجاح الذهبي هو اسم موثوق في الصناعة لسنوات، نقدم منتجات عالية الجودة وخدمة استثنائية لعملائنا في جميع أنحاء العالم.",
+    "ourMission": "مهمتنا",
+    "ourVision": "رؤيتنا",
+    "ourValues": "قيمنا",
+    "teamTitle": "تعرف على فريقنا",
+    "historyTitle": "تاريخنا",
     "heroTitle": "من نحن",
     "heroDescription": "بوابتك إلى الحلول الطبية الحيوية الموثوقة",
     "aboutText": "نجاح ذهبي هي موزع موثوق للمنتجات الطبية الحيوية مقرها في المملكة العربية السعودية والإمارات العربية المتحدة. نحن ملتزمون بسد الفجوة بين الشركات المصنعة الدولية للمنتجات الطبية الحيوية والمؤسسات الصحية المحلية عبر منطقة الخليج. منذ تأسيسنا، كانت مهمتنا هي تزويد المختبرات ومراكز التشخيص بأدوات طبية حيوية متطورة تعزز الدقة والكفاءة والامتثال.",
